src/pages/Homepage/_Homepage.scss
@import '~sass-mq/mq';
@import '../../style/responsive-breakpoints';
@import '../../style/theme';

body {
    margin: 0;
}

.homepage {
    &__container {
        @include theme;
    }

    &__hero-section {
        background-color: $background-colour;
    }

    &__projects-section {
        background-color: $background-colour;
        padding: $spacer-medium 0 $spacer-large 0;
    }

    &__about-section {
        background-color: $text-colour;
        padding: $spacer-medium 0 $spacer-medium 0;
    }
}

.hero {
    &__container {
        height: 500px;
        position: relative;
        width: 100%;
    }

    &__video {
        height: 100%;
        left: 50%;
        position: absolute;
        top: 50%;
        transform: translate(-50%, -50%);
        width: auto;
    }

    &__overlay {
        bottom: $spacer-medium * 2;
        position: absolute;
        text-shadow: 0 0 15px rgba($color: $background-colour, $alpha: 0.9);
        width: 100%;
    }

    &__title {
        float: left;
        width: auto;

        hr {
            background: $text-colour;
            border: 0;
            color: $text-colour;
            height: 2.3px;
            margin: 1.15em 0;
        }
    }
}

.projects {
    &__title {
        padding-bottom: $spacer-medium;
    }

    &__container {
        @include link;
        .project {
            &__title {
                display: table-cell;
                height: 100%;
                text-align: center;
                vertical-align: middle;
                width: 100%;

                h3 {
                    line-height: 1.8em;
                }
            }

            &__overlay {
                display: table;
                height: 100%;
                opacity: 0;
                position: absolute;
                top: 0;
                transition: 0.5s ease-in-out;
                width: 100%;
                &:hover {
                    background-color: rgba($color: $background-colour, $alpha: 0.6);
                    opacity: 1;
                }
            }

            &__image {
                position: relative;
                width: 100%;
                background-color: $background-colour;
            }
        }
    }
}

.about {
    &__container {
        color: $background-colour;
        h3 {
            color: $background-colour;
            padding-bottom: $spacer-tiny * 1.5;
        }

        .copyright__text {
            float: right;
            text-align: right;
            right: 0;
            @include mq($from: $breakpoint-desktop) {
                bottom: 0;
                position: absolute;
            }
        }

        .contact__icon {
            height: 1.2em;
            padding-right: $spacer-tiny * 0.75;
            width: 1.2em;
        }
    }
}

.centered-layout {
    margin-left: auto;
    margin-right: auto;
    width: 80%;

    @include mq($from: $breakpoint-tablet-portrait) {
        width: 70%;
    }

    @include mq($from: $breakpoint-desktop) {
        width: 75%;
    }
    @include mq($from: $breakpoint-desktop-wide) {
        width: 67%;
    }
}

